--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "angular-simple-popup",
   "description": "A simple popup dialog for angularJS",
   "dist-tags": {
-    "latest": "1.2.0"
+    "latest": "1.3.1"
   },
   "versions": [
-    "1.2.0"
+    "1.3.1"
   ],
   "maintainers": [
-    "john-craddock <jtcraddock@gmail.com>"
+    "john-craddock <jtcraddock@gmail.com>",
+    "Aimee Lally"
   ],
   "time": {
     "modified": "2016-12-01T12:59:46.477Z",
